# machy-api

./: .gitignore  Makefile  README.md  cli  play
boost-asio/: async_client_api.h
boost-asio/include/: async_client_api.h
boost-asio/samples/: async_trajectoryclient.cpp
boost-asio/src/: machysockets.cpp
depr/: CMakeLists.txt
header-only/include/: machyapi.h
header-only/samples/: cli.c  play.c
include/: machyapi.h
samples/: cli.c  cli_unsafe.c  play.c
